syntax = "proto3";

package bot.core.v1;

enum FeatureFlags {
  FEATURE_FLAGS_UNDEFINED = 0;
  FEATURE_FLAGS_DEV = 1;
  FEATURE_FLAGS_BETA = 2;
}

// GetGuildFeatureFlags
message GetGuildFeatureFlagsRequest {
  string guild_id = 1;
}

message GetGuildFeatureFlagsResponse {
  repeated FeatureFlags flags = 3;
}

// CoreSettingsService
service CoreSettingsService {
  rpc GetGuildFeatureFlags (GetGuildFeatureFlagsRequest) returns (GetGuildFeatureFlagsResponse);
}
